--- a/nginx/docs/CHANGES
+++ b/nginx/docs/CHANGES
@@ -1,4 +1,63 @@
 
+Changes with nginx 1.11.3                                        26 Jul 2016
+
+    *) Change: now the "accept_mutex" directive is turned off by default.
+
+    *) Feature: now nginx uses EPOLLEXCLUSIVE on Linux.
+
+    *) Feature: the ngx_stream_geo_module.
+
+    *) Feature: the ngx_stream_geoip_module.
+
+    *) Feature: the ngx_stream_split_clients_module.
+
+    *) Feature: variables support in the "proxy_pass" and "proxy_ssl_name"
+       directives in the stream module.
+
+    *) Bugfix: socket leak when using HTTP/2.
+
+    *) Bugfix: in configure tests.
+       Thanks to Piotr Sikora.
+
+
+Changes with nginx 1.11.2                                        05 Jul 2016
+
+    *) Change: now nginx always uses internal MD5 and SHA1 implementations;
+       the --with-md5 and --with-sha1 configure options were canceled.
+
+    *) Feature: variables support in the stream module.
+
+    *) Feature: the ngx_stream_map_module.
+
+    *) Feature: the ngx_stream_return_module.
+
+    *) Feature: a port can be specified in the "proxy_bind", "fastcgi_bind",
+       "memcached_bind", "scgi_bind", and "uwsgi_bind" directives.
+
+    *) Feature: now nginx uses the IP_BIND_ADDRESS_NO_PORT socket option
+       when available.
+
+    *) Bugfix: a segmentation fault might occur in a worker process when
+       using HTTP/2 and the "proxy_request_buffering" directive.
+
+    *) Bugfix: the "Content-Length" request header line was always added to
+       requests passed to backends, including requests without body, when
+       using HTTP/2.
+
+    *) Bugfix: "http request count is zero" alerts might appear in logs when
+       using HTTP/2.
+
+    *) Bugfix: unnecessary buffering might occur when using the "sub_filter"
+       directive; the issue had appeared in 1.9.4.
+
+
+Changes with nginx 1.11.1                                        31 May 2016
+
+    *) Security: a segmentation fault might occur in a worker process while
+       writing a specially crafted request body to a temporary file
+       (CVE-2016-4450); the bug had appeared in 1.3.9.
+
+
 Changes with nginx 1.11.0                                        24 May 2016
 
     *) Feature: the "transparent" parameter of the "proxy_bind",
